<resources>
    <string name="app_name">RoomApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_hint_name_add">Nome</string>
    <string name="text_hint_last_name_add">Sobrenome</string>
    <string name="text_hint_age_add">Idade</string>
    <string name="text_hint_email_add">Email</string>
    <string name="text_button_add">Adicionar</string>
    <string name="text_hint_name_update">Nome</string>
    <string name="text_hint_last_name_update">Sobrenome</string>
    <string name="text_hint_age_update">Idade</string>
    <string name="text_hint_email_update">Email</string>
    <string name="text_button_update">Atualizar</string>
</resources>