<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="18dp"
    android:orientation="vertical"
    tools:context=".fragments.AddFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextNameAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/text_hint_name_add" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextLastNameAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/text_hint_last_name_add" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextAgeAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/text_hint_age_add"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmailAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/text_hint_email_add" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAdd"
        style="@style/Text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:background="@drawable/background_button"
        android:text="@string/text_button_add" />
</androidx.appcompat.widget.LinearLayoutCompat>