<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="18dp"
    android:orientation="vertical"
    tools:context=".fragments.UpdateFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextNameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/text_hint_name_update" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextLastNameUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/text_hint_last_name_update" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextAgeUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/text_hint_age_update"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmailUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/text_hint_email_update" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonUpdate"
        style="@style/Text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:background="@drawable/background_button"
        android:text="@string/text_button_update" />
</androidx.appcompat.widget.LinearLayoutCompat>